QR Misuse updates

--- a/templates/verify.html
+++ b/templates/verify.html
@@ -194,9 +194,13 @@
                 Please move vehicle to the assigned slot or wait for Admin authorization.
             </p>
 
-            <button class="btn btn-outline-secondary w-100 py-2 rounded-3 fw-bold mt-2" onclick="window.close()">
+            <!-- <button class="btn btn-outline-secondary w-100 py-2 rounded-3 fw-bold mt-2" onclick="window.close()">
                 Close
-            </button>
+            </button> -->
+            <div class="mt-3">
+                <i class="fas fa-spinner fa-spin text-secondary me-2"></i>
+                <span class="text-white-50 small">Waiting for Admin Response...</span>
+            </div>
         </div>
     </div>
 
